# docs/swagger.json
@@ -99,15 +99,6 @@
                     "data": {
                       "type": "object",
                       "$ref": "#/components/schemas/user"
-                    },
-                    "token": {
-                      "type": "object",
-                      "properties": {
-                        "accessToken": {
-                          "type": "string",
-                          "example": "gocx91Da6+mfdrgJlCn5qQ=="
-                        }
-                      }
                     }
                   }
                 }
@@ -206,15 +197,6 @@
                           "example": "light"
                         }
                       }
-                    },
-                    "token": {
-                      "type": "object",
-                      "properties": {
-                        "accessToken": {
-                          "type": "string",
-                          "example": "gocx91Da6+mfdrgJlCn5qQ=="
-                        }
-                      }
                     }
                   }
                 }
@@ -307,15 +289,6 @@
                     "message": {
                       "type": "string",
                       "example": "Successfully is refreshed!"
-                    },
-                    "data": {
-                      "type": "object",
-                      "properties": {
-                        "accessToken": {
-                          "type": "string",
-                          "example": "gocx91Da6+mfdrgJlCn5qQ=="
-                        }
-                      }
                     }
                   }
                 }
@@ -485,7 +458,7 @@
         }
       }
     },
-    "/": {
+    "/boards/": {
       "get": {
         "tags": [
           "boards"
@@ -498,7 +471,43 @@
             "bearerAuth": []
           }
         ],
-        "requestBody": null
+        "requestBody": null,
+        "responses": {
+          "200": {
+            "description": "Geted a user",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "required": [
+                    "status",
+                    "message",
+                    "data"
+                  ],
+                  "properties": {
+                    "status": {
+                      "type": "integer",
+                      "example": 201
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "Successfully find a boards!"
+                    },
+                    "data": {
+                      "$ref": "#/components/schemas/boards"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized."
+          },
+          "404": {
+            "$ref": "#/components/responses/404"
+          }
+        }
       },
       "post": {
         "tags": [
@@ -542,7 +551,7 @@
           }
         },
         "responses": {
-          "201": {
+          "200": {
             "description": "Creates a board",
             "content": {
               "application/json": {
@@ -554,6 +563,14 @@
                     "data"
                   ],
                   "properties": {
+                    "status": {
+                      "type": "string",
+                      "example": 200
+                    },
+                    "massage": {
+                      "type": "string",
+                      "example": "Successfully created a board!"
+                    },
                     "data": {
                       "type": "object",
                       "example": {
@@ -603,7 +620,132 @@
             "description": "NotFoundError"
           }
         }
-      }
+      },
+      "patch": {
+        "tags": [
+          "boards"
+        ],
+        "summary": "Update board",
+        "operationId": "updateBoard",
+        "description": "Update a board with payload",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "boardId",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "example": "65ca67e7ae7f10c88b598384"
+            },
+            "description": "The ID of the board to update."
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "required": [
+                  "title"
+                ],
+                "properties": {
+                  "title": {
+                    "description": "Board's title",
+                    "type": "string",
+                    "example": "Project 1"
+                  },
+                  "background": {
+                    "description": "Board's background",
+                    "type": "string",
+                    "example": "grey"
+                  },
+                  "icon": {
+                    "description": "/src/images/icons.svg#icon-icon-1-square",
+                    "type": "string",
+                    "example": "Qweas23!"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Update a board",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "required": [
+                    "status",
+                    "message",
+                    "data"
+                  ],
+                  "properties": {
+                    "status": {
+                      "type": "string",
+                      "example": 200
+                    },
+                    "massage": {
+                      "type": "string",
+                      "example": "Successfully patched a board!"
+                    },
+                    "data": {
+                      "type": "object",
+                      "example": {
+                        "type": "object",
+                        "properties": {
+                          "_id": {
+                            "description": "board id",
+                            "type": "string",
+                            "example": "65e4decdd286b30065d54af9"
+                          },
+                          "title": {
+                            "description": "Board's title",
+                            "type": "string",
+                            "example": "Project 1"
+                          },
+                          "background": {
+                            "description": "Board's background",
+                            "type": "string",
+                            "default": "grey",
+                            "example": "grey"
+                          },
+                          "icon": {
+                            "description": "Board's icon",
+                            "type": "string",
+                            "default": "/src/images/icons.svg#icon-icon-1-square",
+                            "example": "/src/images/icons.svg#icon-icon-1-square"
+                          },
+                          "createdAt": {
+                            "description": "date of create",
+                            "type": "string",
+                            "example": "2024-10-12T05:46:48.395Z"
+                          },
+                          "updatedAt": {
+                            "description": "date of last update",
+                            "type": "string",
+                            "example": "2024-10-12T05:47:41.792Z"
+                          }
+                        }
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "NotFoundError"
+          }
+        }
+      },
+      "delete": null
     }
   },
   "components": {
@@ -656,6 +798,43 @@
             ],
             "default": "light",
             "example": "light"
+          },
+          "createdAt": {
+            "description": "date of create",
+            "type": "string",
+            "example": "2024-10-12T05:46:48.395Z"
+          },
+          "updatedAt": {
+            "description": "date of last update",
+            "type": "string",
+            "example": "2024-10-12T05:47:41.792Z"
+          }
+        }
+      },
+      "boards": {
+        "type": "object",
+        "properties": {
+          "_id": {
+            "description": "board id",
+            "type": "string",
+            "example": "65e4decdd286b30065d54af9"
+          },
+          "title": {
+            "description": "Board's title",
+            "type": "string",
+            "example": "Project 1"
+          },
+          "background": {
+            "description": "Board's background",
+            "type": "string",
+            "default": "grey",
+            "example": "grey"
+          },
+          "icon": {
+            "description": "Board's icon",
+            "type": "string",
+            "default": "/src/images/icons.svg#icon-icon-1-square",
+            "example": "/src/images/icons.svg#icon-icon-1-square"
           },
           "createdAt": {
             "description": "date of create",
