# src/controllers/auth.js
@@ -22,9 +22,6 @@ export const registerController = async (req, res) => {
             theme: "light",
             createdAt: user.user.createdAt,
             updatedAt: user.user.updatedAt,
-            },
-            token: {
-                accessToken: user.session.accessToken,
             }
         }
     });
@@ -38,8 +35,7 @@ export const loginController = async (req, res) => {
 
     res.json({
         status: 200,
-        message: 'Successfully logged in an user!',
-        data: {accessToken: session.accessToken}
+        message: 'Successfully logged in an user!'
     });
 };
 
@@ -57,8 +53,7 @@ export const refreshUserController = async (req, res) => {
 
     res.json({
         status: 200,
-        message: 'Successfully is refreshed!',
-        data: {accessToken: session.accessToken}
+        message: 'Successfully is refreshed!'
     });
 };
 
